--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -72,8 +72,10 @@ parts:
   changelog:
     plugin: nil
     override-build: |
+      cp "$SNAPCRAFT_PROJECT_DIR"/copyright "$SNAPCRAFT_PART_INSTALL"
       cp "$SNAPCRAFT_PROJECT_DIR"/ChangeLog "$SNAPCRAFT_PART_INSTALL"
     organize:
+      copyright: usr/share/doc/bluez/copyright
       ChangeLog: usr/share/doc/bluez/ChangeLog
   bluez:
     plugin: autotools
@@ -106,7 +108,7 @@ parts:
     filesets:
       libical1a:
         - usr/lib/*/libical*
-    snap:
+    prime:
       - usr/lib/bluetooth/bluetoothd
       - usr/lib/bluetooth/obexd
       - usr/bin/bluetoothctl
@@ -126,10 +128,3 @@ parts:
       snapcraftctl build
       # Run all tests shiped by default
       make check
-
-  common:
-    plugin: dump
-    organize:
-      copyright: usr/share/doc/bluez/copyright
-    prime:
-      - usr/share/doc/bluez/copyright
