--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -12,6 +12,12 @@ confinement: strict
 grade: stable
 base: core20
 
+layout:
+  /usr/var/lib/bluetooth:
+    symlink: $SNAP_DATA
+  /usr/etc/bluetooth:
+    symlink: $SNAP_DATA/etc
+
 apps:
   bluetoothctl:
     command: bin/client-wrapper usr/bin/bluetoothctl
@@ -127,6 +133,9 @@ parts:
       - usr/share/doc/libical3/copyright
       - $libical3
     override-build: |
+      git config user.email "snapcraft@canonical.com"
+      git config user.name "snapcraft"
+      git am "$SNAPCRAFT_PROJECT_DIR"/patch/*
       snapcraftctl build
       cp tools/btmgmt "$SNAPCRAFT_PART_INSTALL"/usr/bin/
       cp tools/obexctl "$SNAPCRAFT_PART_INSTALL"/usr/bin/
