Add libicu so obexd can start
libicu is pulled by libical3. It grows the snap size from 4 to 16MB,
so it is still to be seen if the released version will include obex at all.

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -113,9 +113,16 @@ parts:
       - check
     stage-packages:
       - libical3
+      - libicu66
     filesets:
       libical3:
         - usr/lib/*/libical*
+        - usr/share/doc/libical3/copyright
+      libicu66:
+        - usr/lib/*/libicudata*
+        - usr/lib/*/libicui18n*
+        - usr/lib/*/libicuuc*
+        - usr/share/doc/libicu66/copyright
     prime:
       - usr/lib/bluetooth/bluetoothd
       - usr/lib/bluetooth/obexd
@@ -130,8 +137,8 @@ parts:
       - usr/bin/btmon
       - usr/bin/btmgmt
       - usr/bin/meshctl
-      - usr/share/doc/libical3/copyright
       - $libical3
+      - $libicu66
     override-build: |
       git config user.email "snapcraft@canonical.com"
       git config user.name "snapcraft"
