--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -78,11 +78,9 @@ parts:
   changelog:
     plugin: nil
     override-build: |
-      cp "$SNAPCRAFT_PROJECT_DIR"/copyright "$SNAPCRAFT_PART_INSTALL"
       cp "$SNAPCRAFT_PROJECT_DIR"/ChangeLog "$SNAPCRAFT_PART_INSTALL"
     organize:
-      copyright: usr/share/doc/bluez/copyright
-      ChangeLog: usr/share/doc/bluez/ChangeLog
+      ChangeLog: snap/ChangeLog
   bluez:
     plugin: autotools
     source: https://git.launchpad.net/ubuntu/+source/bluez
