--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -70,23 +70,54 @@ slots:
       interface: bluez
 
 parts:
+
   bluez-common:
     plugin: dump
     source: bin/
     organize:
       client-wrapper: bin/client-wrapper
+
   changelog:
     plugin: nil
     override-build: |
       cp "$SNAPCRAFT_PROJECT_DIR"/ChangeLog "$SNAPCRAFT_PART_INSTALL"
     organize:
       ChangeLog: snap/ChangeLog
+
+  # Get aux scripts so they can be used in other parts. Also, stage
+  # packages we rebuild later to get copyright and ensure they are in
+  # the manifest.
+  stack-snaps-tools:
+    plugin: nil
+    source: https://git.launchpad.net/~snappy-hwe-team/snappy-hwe-snaps/+git/stack-snaps-tools
+    source-type: git
+    build-packages:
+      - dpkg-dev
+      - git
+    stage-packages:
+      - bluez
+      - bluez-obexd
+      - bluez-hcidump
+    override-build: |
+      set -ex
+      find "$SNAPCRAFT_PART_INSTALL"/ -type f,l \
+                -not -path "$SNAPCRAFT_PART_INSTALL"/'usr/share/doc/bluez*' \
+           -delete
+      find "$SNAPCRAFT_PART_INSTALL"/ -type d -empty -delete
+      mkdir -p "$SNAPCRAFT_PART_INSTALL"/build-tools
+      cp build-tools/* "$SNAPCRAFT_PART_INSTALL"/build-tools
+    prime:
+      - usr/share/doc/bluez
+      - usr/share/doc/bluez-obexd
+      - usr/share/doc/bluez-hcidump
+
   bluez:
+    after: [ stack-snaps-tools ]
     plugin: autotools
     source: https://git.launchpad.net/ubuntu/+source/bluez
     source-type: git
-    source-branch: applied/5.53-0ubuntu2
-    configflags:
+    source-branch: applied/ubuntu/focal
+    autotools-configure-parameters:
       - --prefix=/usr
       - --libexec=/usr/lib/
       - --enable-experimental
@@ -124,6 +155,8 @@ parts:
       - usr/bin/btmgmt
       - usr/bin/meshctl
     override-build: |
+      set -ex
+      "$SNAPCRAFT_STAGE"/build-tools/check-versions bluez yes
       git config user.email "snapcraft@canonical.com"
       git config user.name "snapcraft"
       git am "$SNAPCRAFT_PROJECT_DIR"/patch/*
