Add missins libjson build dependency
This library is in the core20 snap, so we need it only while building.

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -139,6 +139,7 @@ parts:
       - libudev-dev
       - libreadline-dev
       - libical-dev
+      - libjson-c-dev
       - check
     prime:
       - usr/lib/bluetooth/bluetoothd
