--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: bluez
-version: 5.53-2-dev
+version: 5.53-2
 type: app
 summary: Bluetooth tools and daemons
 description: |
@@ -65,6 +65,9 @@ apps:
 plugs:
   client:
       interface: bluez
+  uinput:
+  kernel-crypto-api:
+
 slots:
   service:
       interface: bluez
