Start following focal-updates for bluez
Now focal-updates has been created, so we need to follow if to get the
latest sources.

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -117,7 +117,7 @@ parts:
     plugin: autotools
     source: https://git.launchpad.net/ubuntu/+source/bluez
     source-type: git
-    source-branch: applied/ubuntu/focal
+    source-branch: applied/ubuntu/focal-updates
     autotools-configure-parameters:
       - --prefix=/usr
       - --libexec=/usr/lib/
