--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -77,7 +77,7 @@ parts:
   changelog:
     plugin: nil
     override-build: |
-      cp "$SNAPCRAFT_PROJECT_DIR"/ChangeLog "$SNAPCRAFT_PART_INSTALL"
+      cp "$CRAFT_PROJECT_DIR"/ChangeLog "$CRAFT_PART_INSTALL"
     organize:
       ChangeLog: snap/ChangeLog
 
@@ -97,12 +97,12 @@ parts:
       - bluez-hcidump
     override-build: |
       set -ex
-      find "$SNAPCRAFT_PART_INSTALL"/ -type f,l \
-                -not -path "$SNAPCRAFT_PART_INSTALL"/'usr/share/doc/bluez*' \
+      find "$CRAFT_PART_INSTALL"/ -type f,l \
+                -not -path "$CRAFT_PART_INSTALL"/'usr/share/doc/bluez*' \
            -delete
-      find "$SNAPCRAFT_PART_INSTALL"/ -type d -empty -delete
-      mkdir -p "$SNAPCRAFT_PART_INSTALL"/build-tools
-      cp build-tools/* "$SNAPCRAFT_PART_INSTALL"/build-tools
+      find "$CRAFT_PART_INSTALL"/ -type d -empty -delete
+      mkdir -p "$CRAFT_PART_INSTALL"/build-tools
+      cp build-tools/* "$CRAFT_PART_INSTALL"/build-tools
     prime:
       - usr/share/doc/bluez
       - usr/share/doc/bluez-hcidump
@@ -148,11 +148,11 @@ parts:
       - usr/bin/btmgmt
     override-build: |
       set -ex
-      "$SNAPCRAFT_STAGE"/build-tools/check-versions bluez yes
+      "$CRAFT_STAGE"/build-tools/check-versions bluez yes
       git config user.email "snapcraft@canonical.com"
       git config user.name "snapcraft"
-      git am "$SNAPCRAFT_PROJECT_DIR"/patch/*
-      snapcraftctl build
-      cp tools/btmgmt "$SNAPCRAFT_PART_INSTALL"/usr/bin/
+      git am "$CRAFT_PROJECT_DIR"/patch/*
+      craftctl default
+      cp tools/btmgmt "$CRAFT_PART_INSTALL"/usr/bin/
       # Run all tests shiped by default
       make check
