tests: now aliases are removed when installing locally a snap
So we need to adapt the tests.

--- a/tests/main/daemon-communication/task.yaml
+++ b/tests/main/daemon-communication/task.yaml
@@ -4,7 +4,7 @@ execute: |
   . "$SYSTEMSNAPSTESTLIB"/utilities.sh
 
   wait_for_systemd_service snap.bluez.bluez
-  /snap/bin/bluetoothctl <<EOF
+  bluez.bluetoothctl <<EOF
   list
   exit
   EOF
