--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -170,3 +170,6 @@ parts:
       cp tools/obexctl "$SNAPCRAFT_PART_INSTALL"/usr/bin/
       # Run all tests shiped by default
       #make check
+      # Strip binaries
+      find "$SNAPCRAFT_PART_INSTALL"/ -executable -type f | xargs file -Ni |
+          grep 'application/x-.*executable\|application/x-.*sharedlib' | cut -d: -f1 | xargs strip
