--- a/manifests/manifest-riscv64.yaml
+++ b/manifests/manifest-riscv64.yaml
@@ -1,9 +1,9 @@
 snapcraft-version: 8.0.2
 snapcraft-started-at: '2024-02-09T12:46:06.927136Z'
 snapcraft-os-release-id: ubuntu
-snapcraft-os-release-version-id: '22.04'
+snapcraft-os-release-version-id: '24.04'
 name: bluez
-version: 5.64-5
+version: 5.72-0ubuntu1
 summary: Bluetooth tools and daemons
 description: |
   This package contains tools and system daemons for using Bluetooth
@@ -11,8 +11,9 @@ description: |
   is an Open Source project distributed under GNU General Public
   License (GPL). See the project homepage for more details:
   https://code.launchpad.net/~snappy-hwe-team/snappy-hwe-snaps/+git/bluez
-base: core22
-grade: stable
+grade: devel
+build-base: devel
+base: core24
 confinement: strict
 apps:
   bluetoothctl:
@@ -121,7 +122,7 @@ parts:
     plugin: autotools
     source: https://git.launchpad.net/ubuntu/+source/bluez
     source-type: git
-    source-branch: applied/ubuntu/jammy-updates
+    source-branch: applied/ubuntu/noble-proposed
     autotools-configure-parameters:
     - --prefix=/usr
     - --libexec=/usr/lib/
@@ -145,6 +146,7 @@ parts:
     - libical-dev
     - libjson-c-dev
     - check
+    - python3-pygments
     prime:
     - usr/lib/bluetooth/bluetoothd
     - usr/bin/bluetoothctl
